<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/record_other"
        android:showAsAction="ifRoom"
        android:title="@string/record_sound"
        />
    <item 
        android:id="@+id/load_other"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/load"
        />
    
    <item 
        android:id="@+id/next_other"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/piano_option"
        />
    
    <item 
        android:id="@+id/action_settings_other" 
        android:orderInCategory="3" 
        android:showAsAction="never" 
        android:title="@string/action_settings" 
        />
    <item
        android:id="@+id/about_other"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/about"
        />

</menu>
