<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lge.e_instrument.PianoActivity" >

    
    <item
        android:id="@+id/record"
        android:showAsAction="ifRoom"
        android:title="@string/record_sound"
        />
    <item 
        android:id="@+id/load"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/load"
        />
    
    <item 
        android:id="@+id/next"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/another_option"
        />
    
    <item
        android:id="@+id/about"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/about"
        />

</menu>
